[package]
name = "grandeur"
description = "Generic abstract Update-Render-Reconcile-Thing"
repository = "https://github.com/chitoyuu/grandeur"
documentation = "https://docs.rs/grandeur"
authors = ["Chitose Yuuzaki <chitoyuu@potatoes.gay>"]
license = "MPL-2.0"
version = "0.0.1"
edition = "2021"
readme = "../README.md"
keywords = ["nightly"]
workspace = ".."

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ahash = "0.7.6"
hashbrown = "0.11.2"

[features]
default = ["std"]
nightly = []
std = []

[package.metadata.docs.rs]
features = ["nightly", "std"]