[package]
name = "grandeur_gdnative"
version = "0.0.1"
edition = "2021"
description = "GDNative backend for generic abstract Update-Render-Reconcile-Thing"
license = "MIT OR Apache-2.0"
workspace = ".."
repository = "https://github.com/chitoyuu/grandeur"
documentation = "https://docs.rs/grandeur"
authors = ["Chitose Yuuzaki <chitoyuu@potatoes.gay>"]
keywords = ["nightly"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
gdnative = "0.10"
grandeur = { version = "0.0.1", path = "../grandeur" }
grandeur_gdnative_macros = { version = "0.1.0", path = "../grandeur_gdnative_macros", optional = true }
derivative = "2.2"
hashbrown = "0.11.2"
thiserror = "1.0"
crossbeam-channel = "0.5.1"
indexmap = "1.7.0"
ahash = "0.7.6"
log = "0.4.0"

[features]
default = []
nightly = ["grandeur/nightly"]
macros = ["grandeur_gdnative_macros"]

[package.metadata.docs.rs]
features = ["nightly", "macros"]