[package]
name = "grandeur_gdnative_macros"
version = "0.1.1"
description = "RSX macros for generic abstract Update-Render-Reconcile-Thing"
edition = "2021"
license = "MPL-2.0"
workspace = ".."
repository = "https://github.com/chitoyuu/grandeur"
documentation = "https://docs.rs/grandeur"
authors = ["Chitose Yuuzaki <chitoyuu@potatoes.gay>"]

[lib]
proc_macro = true

[dependencies]
syn = { version = "1.0", features = ["extra-traits", "visit", "visit-mut"] }
quote = "1.0"
syn-rsx = "0.9"
proc-macro2 = "1.0"
proc-macro-crate = "1.1.0"